tests/pos/i4166.scala
//> using options -Xfatal-warnings -deprecation -feature

package foo {
  class Hello
}

package bar {
  class Hello
}
