tests/neg/i2673.scala
//> using options -Xfatal-warnings

package Foos

class Foo // warn
class foo

// nopos-error: No warnings can be incurred under -Werror.